[package]
name = "basic-test"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
thirtyfour = { git = "https://github.com/TilBlechschmidt/thirtyfour", branch = "debug/dns-client" }
anyhow = "1"
serde_json = "1"
thirtyfour_query = "0.7"
humantime = "2.1"
base64 = "0.13"
